Add Employee and Role entities, update related functionality.
Replaced Room entity with Employee entity in AppSettings and MainWindow. Introduced Role and RoleName enumerations to handle employee roles. Added new resource dictionary for standardized styles and updated App.xaml to include it.

--- a/Duru.UI/Duru.UI.csproj
+++ b/Duru.UI/Duru.UI.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Duru.Resources\Duru.Resources.csproj" />
       <ProjectReference Include="..\Duru.UI.ViewModel\Duru.UI.ViewModel.csproj" />
     </ItemGroup>
 
