Integrate MahApps.Metro UI framework and enhance bindings.
Replaced default WPF components with MahApps.Metro controls, adding a modern look and feel. Introduced `RaisePropertyChanged` for better MVVM property binding. Removed unused `Class1` and updated resources to include Metro styles, streamlining UI consistency.

--- a/Duru.UI/Duru.UI.csproj
+++ b/Duru.UI/Duru.UI.csproj
@@ -13,4 +13,9 @@
       <ProjectReference Include="..\Duru.UI.ViewModel\Duru.UI.ViewModel.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MahApps.Metro" Version="3.0.0-alpha0513" />
+      <PackageReference Include="MahApps.Metro.IconPacks" Version="5.1.0" />
+    </ItemGroup>
+
 </Project>
