--- a/Duru.Resources/Duru.Resources.csproj
+++ b/Duru.Resources/Duru.Resources.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Remove="Resources\StandartStyles.xaml" />
+      <Resource Include="Resources\StandartStyles.xaml" />
+    </ItemGroup>
+    
 </Project>
