--- a/Duru.UI.ViewModel/Duru.UI.ViewModel.csproj
+++ b/Duru.UI.ViewModel/Duru.UI.ViewModel.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>Duu.UI.ViewModel</RootNamespace>
+        <RootNamespace>Duru.UI.ViewModel</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
