Update App.config timeout setting and refactor related code for improved message handling

--- a/Duru.UI.ViewModel/Duru.UI.ViewModel.csproj
+++ b/Duru.UI.ViewModel/Duru.UI.ViewModel.csproj
@@ -9,6 +9,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Duru.Library\Duru.Library.csproj" />
+      <ProjectReference Include="..\Duru.Resources\Duru.Resources.csproj" />
+      <ProjectReference Include="..\Duru.UI.App\Duru.UI.App.csproj" />
       <ProjectReference Include="..\Duru.UI.Data\Duru.UI.Data.csproj" />
     </ItemGroup>
 
