Update InfoMessageTimeout in App.config and refactor related code for improved message handling

--- a/Duru.UI/Duru.UI.csproj
+++ b/Duru.UI/Duru.UI.csproj
@@ -11,7 +11,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Duru.Resources\Duru.Resources.csproj" />
-      <ProjectReference Include="..\Duru.UI.App\Duru.UI.App.csproj" />
+      <ProjectReference Include="..\Duru.UI.Utils\Duru.UI.Utils.csproj" />
       <ProjectReference Include="..\Duru.UI.ViewModel\Duru.UI.ViewModel.csproj" />
     </ItemGroup>
 
