--- a/Duru.Library/Duru.Library.csproj
+++ b/Duru.Library/Duru.Library.csproj
@@ -10,4 +10,10 @@
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="System.Configuration.ConfigurationManager">
+        <HintPath>..\..\..\..\..\Program Files\dotnet\shared\Microsoft.WindowsDesktop.App\9.0.2\System.Configuration.ConfigurationManager.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
