--- a/Duru.UI.ViewModel/Duru.UI.ViewModel.csproj
+++ b/Duru.UI.ViewModel/Duru.UI.ViewModel.csproj
@@ -10,12 +10,18 @@
     <ItemGroup>
       <ProjectReference Include="..\Duru.Library\Duru.Library.csproj" />
       <ProjectReference Include="..\Duru.Resources\Duru.Resources.csproj" />
-      <ProjectReference Include="..\Duru.UI.App\Duru.UI.App.csproj" />
+      <ProjectReference Include="..\Duru.UI.Utils\Duru.UI.Utils.csproj" />
       <ProjectReference Include="..\Duru.UI.Data\Duru.UI.Data.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="System.Configuration.ConfigurationManager">
+        <HintPath>..\..\..\..\..\Program Files\dotnet\shared\Microsoft.WindowsDesktop.App\9.0.2\System.Configuration.ConfigurationManager.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
